--- a/CheckMates/Base.lproj/Main.storyboard
+++ b/CheckMates/Base.lproj/Main.storyboard
@@ -19,11 +19,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="09t-n4-yJa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="09t-n4-yJa">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OL2-2g-Yc1">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OL2-2g-Yc1">
                                 <rect key="frame" x="261" y="295" width="79" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="79" id="YTX-p8-S7C"/>
+                                </constraints>
                                 <state key="normal" image="CameraIcon"/>
                                 <connections>
                                     <action selector="snapReceipt:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WgF-4h-Je6"/>
@@ -32,12 +35,12 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="09t-n4-yJa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="e0Q-Od-dmh"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OL2-2g-Yc1" secondAttribute="bottom" id="e1Q-RY-iJz"/>
-                            <constraint firstItem="OL2-2g-Yc1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ikg-il-UvE"/>
-                            <constraint firstItem="OL2-2g-Yc1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="qGS-aQ-phY"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="OL2-2g-Yc1" secondAttribute="trailing" constant="-20" id="qdJ-gx-sbl"/>
-                            <constraint firstItem="09t-n4-yJa" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="sJe-K0-qnu"/>
+                            <constraint firstAttribute="trailing" secondItem="09t-n4-yJa" secondAttribute="trailing" id="CNV-cv-6Eh"/>
+                            <constraint firstItem="09t-n4-yJa" firstAttribute="centerX" secondItem="OL2-2g-Yc1" secondAttribute="centerX" id="NUC-9n-4LL"/>
+                            <constraint firstItem="09t-n4-yJa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Nbw-2c-YdH"/>
+                            <constraint firstItem="09t-n4-yJa" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Og6-jE-OFS"/>
+                            <constraint firstItem="09t-n4-yJa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="agQ-7o-VF2"/>
+                            <constraint firstItem="09t-n4-yJa" firstAttribute="centerY" secondItem="OL2-2g-Yc1" secondAttribute="centerY" id="baD-PO-Bga"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Snap Receipt" id="R51-zh-hYc"/>
@@ -86,11 +89,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="lno-fv-pFM">
+                        <view key="tableFooterView" contentMode="scaleToFill" restorationIdentifier="d" id="lno-fv-pFM">
                             <rect key="frame" x="0.0" y="157" width="600" height="65"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GWS-r5-6Ge">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GWS-r5-6Ge">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                     <state key="normal" title="Save Receipt"/>
@@ -101,9 +104,14 @@
                             </subviews>
                             <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <accessibility key="accessibilityConfiguration" label="Save Receipt">
+                                <bool key="isElement" value="YES"/>
+                            </accessibility>
                             <constraints>
-                                <constraint firstItem="GWS-r5-6Ge" firstAttribute="centerY" secondItem="lno-fv-pFM" secondAttribute="centerY" id="cin-0G-mak"/>
-                                <constraint firstItem="GWS-r5-6Ge" firstAttribute="centerX" secondItem="lno-fv-pFM" secondAttribute="centerX" id="qTf-0A-LdR"/>
+                                <constraint firstItem="GWS-r5-6Ge" firstAttribute="leading" secondItem="lno-fv-pFM" secondAttribute="leading" id="1bz-gD-q1C"/>
+                                <constraint firstAttribute="trailing" secondItem="GWS-r5-6Ge" secondAttribute="trailing" id="6wb-tX-SJY"/>
+                                <constraint firstAttribute="bottom" secondItem="GWS-r5-6Ge" secondAttribute="bottom" id="9PC-LV-Xt2"/>
+                                <constraint firstItem="GWS-r5-6Ge" firstAttribute="top" secondItem="lno-fv-pFM" secondAttribute="top" id="qLy-0b-bmc"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -279,6 +287,9 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYo-kf-go7">
                                                 <rect key="frame" x="0.0" y="0.0" width="62" height="26"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="62" id="mgZ-tA-DVZ"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -316,6 +327,9 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKA-9p-yiY">
                                                 <rect key="frame" x="0.0" y="0.0" width="62" height="26"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="62" id="61M-if-lQl"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -355,18 +369,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="OlI-Mw-6C3" firstAttribute="leading" secondItem="ykm-Oy-Rle" secondAttribute="leading" id="F83-I7-n8d"/>
-                                    <constraint firstItem="ykm-Oy-Rle" firstAttribute="leading" secondItem="xra-cP-ZIx" secondAttribute="leading" id="h5C-9q-DvU"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="Blm-dz-fPM" firstAttribute="leading" secondItem="yKs-2H-ISr" secondAttribute="leadingMargin" id="bOW-vW-Zxd"/>
-                            <constraint firstItem="Blm-dz-fPM" firstAttribute="top" secondItem="KOs-kT-GNN" secondAttribute="bottom" constant="22" id="cGG-0I-hbi"/>
-                            <constraint firstItem="Blm-dz-fPM" firstAttribute="trailing" secondItem="yKs-2H-ISr" secondAttribute="trailingMargin" id="lQz-kj-vyL"/>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="leading" secondItem="yKs-2H-ISr" secondAttribute="leadingMargin" id="7ss-Ms-bzb"/>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="trailing" secondItem="yKs-2H-ISr" secondAttribute="trailingMargin" id="8RD-75-91u"/>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="top" secondItem="KOs-kT-GNN" secondAttribute="bottom" constant="22" id="hs6-dO-sbg"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="eVG-U8-8PQ" appends="YES" id="Dgn-Tz-qLU"/>
